Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4199

Parent Selection - parents not marked down due to race

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.2, 6.2.0
    • Core
    • None

    Description

      I ran across a bug where a parent may not be marked down due to a race updating the failCount in a parent record. Also this corrects a bug when marking parents back up. markParentUp() should only be called for a parent marked for retry in HttpTransact::handle_response_from_parent() when the connection is in a good state.

      I have a PR with patches.

      Attachments

        Activity

          People

            jrushford John Rushford
            jrushford John Rushford
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: