TS-4199: Fixed a bug where a parent is not marked down due to a race updating the parent record failCount.  Added a fix to only mark up retryable parents in HttpTransact when the retry is successful.

This closes #473

(cherry picked from commit d59c7c0a950bbf5826cbc675399681af64dbb689)